Delete admin from feature
